[dev]v4.0.6
- ADDED: Version checker
- CHANGE: Lights use torch placement rules
- FIX: Stained leaf decay
- FIX: Flatland generation

v4.0.5
- ADDED: Ore Dictionary registration for gems
- FIX: Crash when world is not installed.

v4.0.4
- ADDED: Retroactive world generation
- ADDED: Stained trees
- CHANGE: Alloy smelter removed
- CHANGE: Only gates with torches emit light
- FIX: Toggle latch torches being off on placement

v4.0.3
- ADDED: Fixtures
- ADDED: Config option for moving all rendering to TESR
- ADDED: Gates emit light 
- FIX: Many minor bugs

v4.0.2
- ADDED: Walls for world gen blocks
- CHANGE: Ported to Minecraft 1.6.4
- CHANGE: Lights render halos in inventory
- CHANGE: Pointer recipe
- FIX: Server crash
- FIX: Analog signal re-propagation
- FIX: Illumar buttons dropping regular buttons
- FIX: Lights are always off on world load
- FIX: Container shift clicking
- FIX: Gates dont alert wires upon being rotated/configured
- FIX: State cell not saving correctly
- FIX: Bus Transceiver propagation
- FIX: Bus Transceiver lights rendering above the panel
- *FIX: ProjectRed not loading

v4.0.1
- FIX: alloy smelter crash
- FIX: Basalt is now resistant to TNT
- FIX: Red alloy wires output weak signal to neighbors.
- CHANGE: Lighting rewrite
- CHANGE: Updated license
- ADDED: Cage lamps
- ADDED: Compat module
- ADDED: Red Alloy Ingots can be created using using a Tinkers Construct Smeltery
- *FIX: server crash
- *FIX: alloy smelter render
- *FIX: wire debugger crash
- *FIX: diamond saw silicon cutting

v4.0.0
- Initial release


note: a '*' indicates a patch.